[package]
name = "pikestaff"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_chacha = "0.3.1"
verilated = { git = "https://github.com/ngildenhuys/verilated-rs", version = "0.1.2" }
verilated-module = { git = "https://github.com/ngildenhuys/verilated-rs", version = "0.1.1" }

[build-dependencies]
verilator = { git = "https://github.com/ngildenhuys/verilated-rs", version = "0.1.6", features = ["module"]}
